--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/qSu6i2iFMO0"
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=qSu6i2iFMO0&feature=youtu.be"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
