--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
     <header>Bem-vindo ao... FidaFLIX!</header>
 
     <section class="chamada">
-        <div class="chamada-texto">
-            <h1>Sonic 3</h1>
-            <p>#sonic #peak!!!</p>
+        <div class="chamada-foto">
+            <img src="pics/sonic3logo.png" />
         </div>
-
+        <div class="chamada-texto">
+            <h1>Novo filme!</h1>
+            <p>Sonic, Tails e Knuckles estão de volta em mais um filme. Se baseando na história de Sonic Adventure 2, o filme introduz Shadow ao elenco e conta sua triste história de origem, com Sonic e amigos tentando pará-lo de acabar com o planeta! #sonic #peak!!!</p>
+        </div>
+        <div class="chamada-texto">
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/qSu6i2iFMO0?si=ea0GDT9DkxpFqQyH&amp;controls=0"
+            <iframe width="400" height="250" src="https://www.youtube.com/embed/qSu6i2iFMO0?si=ea0GDT9DkxpFqQyH&amp;controls=0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -28,22 +31,22 @@
     </section>
 
     <section class="categoria">
-        <h2>Filmes e séries</h2>
+        <h2>Vídeos sobre o filme</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=QwFmQSdmWOU&pp=ygUWc29uaWMgMyByZXZpZXcgdHJhaWxlcg%3D%3D">
+                <img src="https://i.ytimg.com/vi/QwFmQSdmWOU/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBt4sa_D3eEPzawOnLf2phwzPdL3w" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=5kmVCIMZkXs&pp=ygUWc29uaWMgMyByZXZpZXcgdHJhaWxlcg%3D%3D">
+                <img src="https://i.ytimg.com/vi/5kmVCIMZkXs/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLD-0HWH4CzNR4tFLtwzxXAJTpavUg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=1lit6RWQYTI&pp=ygUWc29uaWMgMyByZXZpZXcgdHJhaWxlcg%3D%3D">
+                <img src="https://i.ytimg.com/vi/1lit6RWQYTI/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLA23qXNUqQVW7mWRdQjXQmCw0zaug" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=Rj6uqYNUAv8&pp=ygUWc29uaWMgMyByZXZpZXcgdHJhaWxlcg%3D%3D">
+                <img src="https://i.ytimg.com/vi/Rj6uqYNUAv8/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDNSyaQFma6g1UWpZGL7ZnCMZZ6WQ" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=1JTDgpEP4eg&pp=ygUWc29uaWMgMyByZXZpZXcgdHJhaWxlcg%3D%3D">
+                <img src="https://i.ytimg.com/vi/1JTDgpEP4eg/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCblJovQlgfGMvBWhfLR3rw23YWPw" />
             </a>
         </div>
     </section>
