--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="chamada-texto">
             <h1>Novo filme!</h1>
-            <p>Sonic, Tails e Knuckles estão de volta em mais um filme. Se baseando na história de Sonic Adventure 2, o filme introduz Shadow ao elenco e conta sua triste história de origem, com Sonic e amigos tentando pará-lo de acabar com o planeta! #sonic #peak!!!</p>
+            <p>Sonic, Tails e Knuckles estão de volta em mais um filme. Se baseando na história de Sonic Adventure 2, o filme introduz Shadow ao elenco e conta sua triste história de origem, com Sonic e amigos tentando impedi-lo de acabar com o planeta! #sonic #peak!!!</p>
         </div>
         <div class="chamada-texto">
         <div>
